# nakama-rs

./: ARCHITECTURE.md  Cargo.toml  README.md
codegen/: main.go
examples/: async.rs  async_single_threaded.rs  authentication.rs  create_leaderboard.rs  docker-compose.yml  join_party.rs  leaderboard.rs  matchmaker.rs  matchmaker1.rs  party.rs  register.rs  socket.rs  storage.rs
examples/modules/: echo_notification.lua  leaderboard.lua  tournament.lua
src/: api_client.rs  api_gen.rs  api_gen_enum.rs  async_client.rs  client.rs  client_adapter.rs  config.rs  default_client.rs  http_adapter.rs  lib.rs  matchmaker.rs  mock_adapter.rs  retry.rs  session.rs  socket.rs  socket_adapter.rs  test_helpers.rs  types.rs  web_socket.rs  web_socket_adapter.rs
tests/: accounts.rs  authentication.rs  channel.rs  friends.rs  get_pokemon.rs  groups.rs  leaderboards.rs  matchmaker.rs  notifications.rs  party.rs  retry.rs  server.rs  session.rs  socket.rs  storage.rs  tournaments.rs
