[package]
name = "nakama-rs"
version = "0.1.1"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Pure rust nakama protocol implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
base64 = "0.13"
nanoserde = "0.1.26"
urlencoding = "2.0.0-alpha.1"
async-trait = "0.1.50"
async-recursion = "0.3.2"
oneshot = "0.1.2"
log = "0.4.14"
isahc = "1.4.0"
qws = { version = "0.7.9", features = ["ssl"] }
chrono = "0.4.19"
url = "1.7.0"
rand = "0.8.4"
tokio-timer = "0.3.0-alpha.6"

#[cfg(feature = "test")]
futures = "0.3.15"

[dev-dependencies]
simple_logger = "1.11.0"
cassette = "0.2.3"
hyper = { version = "0.14.10", features = ["server", "http1", "tcp"]}
tokio = { version = "1.8.1", features = ["macros"] }
